--- a/services/Pi-hole/docker-compose.yml
+++ b/services/Pi-hole/docker-compose.yml
@@ -10,15 +10,24 @@ services:
       - "53:53/tcp"
       - "53:53/udp"
       # - "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
-      - "80:80/tcp"
+      - "81:80/tcp"
     env_file:
       - config.env
     environment:
       TZ: "America/Toronto"
       WEBTHEME: default-dark
       # WEBPASSWORD: 'set a secure password here or it will be random'
+      FTLCONF_REPLY_ADDR4: "192.168.2.116"
     # Volumes store your data between container upgrades
     volumes:
       - './etc-pihole:/etc/pihole'
       - './etc-dnsmasq.d:/etc/dnsmasq.d'
     restart: unless-stopped
+    networks:
+      - homelab
+
+networks:
+  homelab:
+    name: homelab
+    driver: bridge
+    external: true
