--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -17,4 +17,17 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
+
+    server {
+        listen 80;
+        server_name dailyupdates.home.com;
+
+        location / {
+            proxy_pass http://dailyupdates-ui:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
