fix: add 404 page for invalid requests to reverse proxy

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,9 +1,16 @@
-
 events {
     worker_connections 1024;
 }
 
 http {
+    server {
+        listen 80 default_server;
+        server_name home.com;
+
+        location / {
+            return 404;
+        }
+    }
 
     server {
         listen 80;
