--- a/services/nginx/docker-compose.yml
+++ b/services/nginx/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./proxy_directives.conf:/etc/nginx/proxy_directives.conf
     restart: unless-stopped
     networks:
       - homelab
